syntax = "proto3";

option java_multiple_files = true;
package com.dev.grpc.profile;

option java_package = "com.dev.grpc.profile";

enum Gender {
    MALE = 0;
    FEMALE = 1;
}

message UserDetail {
    string name = 1;
    string password = 2;
    string email = 3;
    int32 age = 4;
    Gender gender = 5;
    string date_of_birth = 6;
}

message Users {
    repeated UserDetail user = 1;
}

message User{
	string name = 1;
  string email = 3;
  int32 age = 4;
  Gender gender = 5;
  string date_of_birth = 6;
}


service UserService {
    rpc CreateUser(UserDetail) returns (User);
}